--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ charset-normalizer==3.3.2
 colorama==0.4.6
 cryptography==41.0.5
 distro==1.8.0
+dnspython==2.6.1
 dotty-dict==1.3.1
-GDAL==3.6.4
+exceptiongroup==1.2.0
 greenlet==2.0.2
 h11==0.14.0
 halo==0.0.31
@@ -43,6 +44,7 @@ pycparser==2.21
 pydantic==2.4.2
 pydantic_core==2.10.1
 Pygments==2.15.1
+pymongo==4.6.2
 PyNaCl==1.5.0
 pynvim==0.4.3
 pyserial==3.5
