--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,64 @@
 annotated-types==0.6.0
 anyio==4.3.0
 attrs==23.2.0
+CacheControl==0.14.0
+cachetools==5.3.3
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cryptography==42.0.5
 distro==1.9.0
+dnspython==2.6.1
 exceptiongroup==1.2.0
+firebase-admin==6.5.0
+google-api-core==2.18.0
+google-api-python-client==2.125.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.1
+google-cloud-firestore==2.16.0
+google-cloud-storage==2.16.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
+grpcio==1.62.1
+grpcio-status==1.62.1
 h11==0.14.0
 httpcore==1.0.4
+httplib2==0.22.0
 httpx==0.27.0
 idna==3.6
+msgpack==1.0.8
 openai==1.14.0
 outcome==1.3.0.post0
 packaging==24.0
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
 pydantic==2.6.4
 pydantic_core==2.16.3
+PyInputPlus==0.2.12
+PyJWT==2.8.0
+pymongo==4.6.3
+pyparsing==3.1.2
+PySimpleValidate==0.2.12
 PySocks==1.7.1
 python-dotenv==1.0.1
 rapidfuzz==3.6.2
 requests==2.31.0
+rsa==4.9
 selenium==4.18.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
+stdiomask==0.0.6
 thefuzz==0.22.1
 tqdm==4.66.2
 trio==0.24.0
 trio-websocket==0.11.1
 typing_extensions==4.10.0
+uritemplate==4.1.1
 urllib3==2.2.1
 webdriver-manager==4.0.1
 wsproto==1.2.0
