--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.6.0
 anyio==4.3.0
 attrs==23.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 CacheControl==0.14.0
 cachetools==5.3.3
 certifi==2024.2.2
@@ -52,6 +54,7 @@ rsa==4.9
 selenium==4.18.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
+soupsieve==2.5
 stdiomask==0.0.6
 thefuzz==0.22.1
 tqdm==4.66.2
