--- a/src/google_input/config.json
+++ b/src/google_input/config.json
@@ -1,28 +1,110 @@
 [
-    [
-        {
-            "query": "property management companies in whatcom county", 
-            "url": "https://www.google.com/maps/@48.545241,-122.2509158,10.41z?entry=ttu",
-            "outputfile": "./google_input/query_response.json",
-            "css_selector": ".Nv2PK.tH5CWc.THOPZb"
+    {
+      "query": "property management companies in whatcom county",
+      "url": "https://www.google.com/maps/@48.545241,-122.2509158,10.41z?entry=ttu",
+      "selectors": {
+        "company_elements": {
+          "by": "css_selector",
+          "selector": ".Nv2PK.tH5CWc.THOPZb"
         },
-        {
-            "query": "apartment complexes in whatcom county", 
-            "url": "https://www.google.com/maps/@48.545241,-122.2509158,10.41z?entry=ttu", 
-            "outputfile": "./google_input/query_response.json",
-            "css_selector": ".Nv2PK.THOPZb.CpccDe"
-        }
-    ], 
-    [
-        {
-            "query": "companies",
-            "inputfile": "./google_input/companies.json",
-            "outputdir": "./google_input/output/companies/"
+        "company_title": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[1]/h1"
         },
-        {
-            "query": "properties",
-            "inputfile": "./google_input/properties.json",
-            "outputdir": "./google_input/output/properties/"
+        "company_type": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[2]/div/div[2]/span/span/button"
+        },
+        "location": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[2]/div/div[2]/span/span/button"
+        },
+        "review_count": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[2]/div/div[1]/div[2]/span[2]/span/span"
+        },
+        "avg_rating": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[2]/div/div[1]/div[2]/span[1]/span[1]"
+        },
+        "reviews_button": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[2]/div[3]/div/div/button[2]"
+        },
+        "reviews_scrollable": {
+          "by": "xapth",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[3]"
         }
-    ]
-]
+      }
+    },
+    {
+      "query": "apartment complexes in whatcom county",
+      "url": "https://www.google.com/maps/@48.545241,-122.2509158,10.41z?entry=ttu",
+      "selectors": {
+        "company_elements": {
+          "by": "css_selector",
+          "selector": ".Nv2PK.THOPZb.CpccDe"
+        },
+        "company_title": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[1]/h1"
+        },
+        "company_type": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[2]/div/div[2]/span/span/button"
+        },
+        "location": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[2]/div/div[2]/span/span/button"
+        },
+        "review_count": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[2]/div/div[1]/div[2]/span[2]/span/span"
+        },
+        "avg_rating": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]/div/div[1]/div[2]/div/div[1]/div[2]/span[1]/span[1]"
+        },
+        "reviews_button": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[2]/div[3]/div/div/button[2]"
+        },
+        "reviews_scrollable": {
+          "by": "xapth",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[3]"
+        }
+      }
+    },
+    {
+      "selectors": {
+        "company_title": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[2]/div[2]/div/div[1]/div[1]/h1"
+        },
+        "company_type": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[2]/div[2]/div/div[1]/div[2]/div/div[2]/span/span/button"
+        },
+        "location": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[2]/div[7]/div[3]/button/div/div[2]/div[1]"
+        },
+        "review_count": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[2]/div[2]/div/div[1]/div[2]/div/div[1]/div[2]/span[2]/span/span"
+        },
+        "avg_rating": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[3]/div/div[1]/div/div/div[2]/div[2]/div/div[1]/div[2]/div/div[1]/div[2]/span[1]/span[1]"
+        },
+        "reviews_button": {
+          "by": "xpath",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[3]/div/div/button[2]"
+        },
+        "reviews_scrollable": {
+          "by": "xapth",
+          "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[2]"
+        }
+      }
+    }
+  ]
