--- a/src/yelp_input/output/pomeroy-court-appartments.json
+++ b/src/yelp_input/output/pomeroy-court-appartments.json
@@ -3,8 +3,8 @@
   "slug": "pomeroy-court-appartments",
   "company_type": "property",
   "address": "3100 Ferry Ave Bellingham, WA 98225",
-  "review_count": 2,
-  "avg_rating": 1.0,
+  "displayed_review_count": 2,
+  "displayed_avg_rating": 1.0,
   "reviews": {
     "yelp_reviews": [
       {
