--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ distro==1.9.0
 dnspython==2.6.1
 exceptiongroup==1.2.0
 firebase-admin==6.5.0
+gitdb==4.0.11
+GitPython==3.1.43
 google-api-core==2.18.0
 google-api-python-client==2.125.0
 google-auth==2.29.0
@@ -52,6 +54,7 @@ rapidfuzz==3.6.2
 requests==2.31.0
 rsa==4.9
 selenium==4.18.1
+smmap==5.0.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
