Updating .env template with MONGODB_URL

--- a/.env.template
+++ b/.env.template
@@ -5,5 +5,6 @@ MONGODB_ADMIN_USERNAME=""
 MONGODB_ADMIN_PASSWORD=""
 MONGO_EXPRESS_ADMIN_USERNAME=""
 MONGO_EXPRESS_ADMIN_PASSWORD=""
+MONGODB_URL=""
 YELP_FUSION_KEY=""
 YELP_FUSION_HEADER_TYPE=""
