Adding create_directory and remove() utility functions, adding to yelp and google review scrapers.

--- a/utilities/config.json
+++ b/utilities/config.json
@@ -142,6 +142,12 @@
             }
           }
     },
+    "yelp_config": {
+      "query_obj": {
+        "companies": "property management companies",
+        "properties": "apartment complexes"
+    }
+    },
     "yelp_category_whitelist": [
         "propertymgmt",
         "apartments",
