--- a/utilities/config.json
+++ b/utilities/config.json
@@ -16,6 +16,7 @@
               "values": [
                 "name",
                 "slug",
+                "company_type",
                 "review_count",
                 "average_rating",
                 "adjusted_average_rating"
