--- a/requirements.txt
+++ b/requirements.txt
@@ -32,10 +32,12 @@ httpcore==1.0.4
 httplib2==0.22.0
 httpx==0.27.0
 idna==3.6
+iniconfig==2.0.0
 msgpack==1.0.8
 openai==1.14.0
 outcome==1.3.0.post0
 packaging==24.0
+pluggy==1.5.0
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
@@ -49,6 +51,7 @@ pymongo==4.6.3
 pyparsing==3.1.2
 PySimpleValidate==0.2.12
 PySocks==1.7.1
+pytest==8.3.3
 python-dotenv==1.0.1
 requests==2.31.0
 rsa==4.9
@@ -58,6 +61,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.5
 stdiomask==0.0.6
+tomli==2.1.0
 tqdm==4.66.2
 trio==0.24.0
 trio-websocket==0.11.1
