--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ annotated-types==0.6.0
 anyio==4.3.0
 attrs==23.2.0
 beautifulsoup4==4.12.3
+black==24.10.0
 bs4==0.0.2
 CacheControl==0.14.0
 cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
 cryptography==42.0.5
 distro==1.9.0
 dnspython==2.6.1
@@ -34,9 +36,12 @@ httpx==0.27.0
 idna==3.6
 iniconfig==2.0.0
 msgpack==1.0.8
+mypy-extensions==1.0.0
 openai==1.14.0
 outcome==1.3.0.post0
 packaging==24.0
+pathspec==0.12.1
+platformdirs==4.3.6
 pluggy==1.5.0
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -56,6 +61,7 @@ python-dotenv==1.0.1
 requests==2.31.0
 rsa==4.9
 selenium==4.18.1
+Send2Trash==1.8.3
 smmap==5.0.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
