--- a/utilities/config.json
+++ b/utilities/config.json
@@ -152,7 +152,7 @@
               },
               "location": {
                 "by": "xpath",
-                "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[9]/div[3]/button/div/div[2]/div[1]"
+                "selector": "//*[@id='QA0Szd']/div/div/div[1]/div[2]/div/div[1]/div/div/div[7]/div[3]/button/div/div[2]/div[1]"
               },
               "review_count": {
                 "by": "xpath",
@@ -232,7 +232,8 @@
             "stateside-bellingham": "stateside",
             "sunset-pond-apts": "sunset-pond-apartments",
             "windermere-property-management": "windermere-property-management-bellingham",
-            "woodrose-senior-affordable-apartments": "woodrose-apartments"
+            "woodrose-senior-affordable-apartments": "woodrose-apartments",
+            "olympic-management": "olympic-management-company"
         },
         "google": {
             "access-real-estate-services-llc": "access-real-estate-services",
@@ -246,7 +247,8 @@
             "stateside": "stateside-bellingham",
             "sunset-pond-apartments": "sunset-pond-apts",
             "windermere-property-management-bellingham": "windermere-property-management",
-            "woodrose-apartments": "woodrose-senior-affordable-apartments"
+            "woodrose-apartments": "woodrose-senior-affordable-apartments",
+            "olympic-management-company": "olympic-management"
         }
     },
     "company_blacklist": [
@@ -272,12 +274,19 @@
     ],
     "phrase_blacklist": [
       "remax",
-      "keller-williams"
+      "keller-williams",
+      "ed-finlan",
+      "don-enos",
+      "muljat"
     ],
     "disclaimer": {
         "pure-property-management-of-washington":"Pure Property Management of Washington is relatively new to the Bellingham area, having acquired Son-Rise Property management. It is unclear whether Son-Rise simply rebranded, or whether PURE replaced property managers with their own.",
         "apex-property-management":"Apex Property Management was acquired by the San Francisco-based PTLA in early 2020. Apex's Yelp page indicates that they are officially closed, and their website redirects to PTLA's website. It is unclear whether Apex simply rebranded under PTLA or if they cleaned house after the acquisition.",
-        "sonrise-property-management": "Son-Rise Property Management was acquired by the California-based PURE Property management sometime between 2020 and 2023. It is unclear whether Son-Rise simply rebranded under PURE or if PURE replaced existing management with their own."
+        "sonrise-property-management": "Son-Rise Property Management was acquired by the California-based PURE Property management sometime between 2020 and 2023. It is unclear whether Son-Rise simply rebranded under PURE or if PURE replaced existing management with their own.",
+        "elwood-edge-apartments": "Elwood Edge Apartments was rebranded to \"The Calypso\". Please see the relevant page for up to date reviews and information.",
+        "follis-realty": "Follis Realty is permanently closed as of February 2025.",
+        "rent-lady": "[The] Rent Lady is officially retired as of October 2024.",
+        "triple-rock-apartments": "Triple Rock Apartments was rebranded to \"The Calypso South Apartments\". Please see the relevant page for up to date reviews and information"
     },
     "file_paths": {
       "parent_path": "data",
