--- a/utilities/config.json
+++ b/utilities/config.json
@@ -20,8 +20,7 @@
                 "company_type",
                 "review_count",
                 "average_rating",
-                "adjusted_average_rating",
-                "timestamp"
+                "adjusted_average_rating"
               ]
             },
             "collection_keys": {
